--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="./css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <ul class="pokemon-list">
+        <ul class="pokemon-list"></ul>
         <script src="./js/script.js"></script>
     </body>
 
