--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <ul class="pokemon-list"></ul>
-        <script src="./js/script.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
 
