--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Simlpe App</title>
-        <link href="./css/style.css" rel="stylesheet" type="text/css"/>
+        <title>Simple App</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <ul class="pokemon-list"></ul>
-        <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
+        <script src="js/promise-polyfill.js"></script>
         <script src="js/script.js"></script>
     </body>
 
