--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <div id="modal-container"></div>
+        <h1>Pokedex</h1>
         <ul class="pokemon-list"></ul>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
