--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <button id="show-modal"> Show modal</button>
         <div id="modal-container"></div>
         <h1>Pokedex</h1>
         <ul class="pokemon-list"></ul>
