--- a/index.html
+++ b/index.html
@@ -13,43 +13,52 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">Pokedex</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search Pokemon" aria-label="Search"
-            id="searchbar">
-            <button class="btn btn-warning" type="submit"> Search</button>
-            </form>
-          </div>
+      <!-- NavBar with Search Bar -->
+      <header class="page-header" id="top">
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+            <a class="navbar-brand" href="#">Pokedex</a> 
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+  
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" id="filter" type="search" placeholder="Find a pokemon.." aria-label="Search">
+                </form>
+              </div>
+  
         </nav>
-        <ul class="pokemon-list list-group"></ul>
-
-        <div class="modal fade" id="poModal" tabindex="-1" role="dialog" aria-labelledby="poModalLabel" aria-hidden="true">
+      </header>
+  
+      <main>
+  
+  
+      <!-- List of Pokemon -->
+        <div class="container list-container">
+          <ul class="pokemon-list row list-unstyled justify-content-center"></ul>
+        </div>
+  
+  
+        <!-- Modal -->
+        <div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="poModalLabel">Modal Title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                  </button>
-                  </div>
-                  <div class="modal-body">
-                    ...
-                    </div>
-                  </div>
-                </div>
+              <div class="modal-header justify-content-center">
+                <h5 class="modal-title" id="modal-title"> </h5>
               </div>
-                    
-        
+              <div class="modal-body">
+              </div>
+              <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-close btn-warning border border-secondary" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true"> close</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
-          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-          crossorigin="anonymous"></script>
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
           integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
           crossorigin="anonymous"></script>
