--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Simple App</title>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" 
+        rel="stylesheet">
+        <link rel="stylesheet" 
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
            crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
@@ -17,13 +19,16 @@
       <header class="page-header" id="top">
         <nav class="navbar navbar-expand-sm navbar-light fixed-top">
             <a class="navbar-brand" href="#">Pokedex</a> 
-             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" 
+             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+             aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
   
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" id="filter" type="search" placeholder="Find a pokemon.." aria-label="Search">
+                    <input class="form-control mr-sm-2" id="filter" type="search" 
+                    placeholder="Find a pokemon.." aria-label="Search">
                 </form>
               </div>
   
@@ -57,6 +62,12 @@
           </div>
         </div>
 
+        <button type="button" class="btn btn-floating" id="go-to-top">
+          <i class="bi bi-caret-up-fill"></i>
+        </button>
+
+        </main>
+
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
@@ -66,8 +77,8 @@
           integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
           crossorigin="anonymous"></script>
 
-          <script src="js/promise-polyfill.js"></script>
-          <script src="js/fetch.umd.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/fetch.umd.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
