--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   
   
         <!-- Modal -->
-        <div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
+        <div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
+        aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header justify-content-center">
@@ -54,7 +55,8 @@
               <div class="modal-body">
               </div>
               <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-close btn-warning border border-secondary" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="btn btn-close btn-warning border border-secondary" 
+                data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true"> close</span>
                 </button>
               </div>
@@ -62,11 +64,13 @@
           </div>
         </div>
 
-        <button type="button" class="btn btn-floating" id="go-to-top">
+        </main>
+
+        <button type="button" class="btn btn-floating" id="btn-go-to-top">
           <i class="bi bi-caret-up-fill"></i>
         </button>
 
-        </main>
+        
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
