--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <!-- NavBar with Search Bar -->
       <header class="page-header" id="top">
         <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-            <a class="navbar-brand" href="#">Pokedex</a> 
+            <a class="navbar-brand"  href="#">Pokedex
+              <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
+            </a> 
              <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
              aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +68,7 @@
 
         </main>
 
-        <button type="button" class="btn btn-floating" id="btn-go-to-top">
+        <button type="button" class="btn btn-floating" id="btn-back-to-top">
           <i class="bi bi-caret-up-fill"></i>
         </button>
 
