--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Simple App</title>
+        <title>Pokedex App</title>
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" 
         rel="stylesheet">
         <link rel="stylesheet" 
@@ -18,9 +18,9 @@
       <!-- NavBar with Search Bar -->
       <header class="page-header" id="top">
         <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-            <a class="navbar-brand"  href="#">Pokedex
+            <h1 class="navbar-brand">Pokedex
               <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
-            </a> 
+            </h1> 
              <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
              aria-expanded="false" aria-label="Toggle navigation">
