--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Pokedex App</title>
+       <title>Pokemon Library</title>
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" 
         rel="stylesheet">
         <link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
-           crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+        crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="img/icons8-pokeball-48.png">
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
 
@@ -42,7 +43,7 @@
   
       <!-- List of Pokemon -->
         <div class="container list-container">
-          <ul class="pokemon-list sr-only row list-unstyled justify-content-center"></ul>
+          <ul class="pokemon-list row list-unstyled justify-content-center"></ul>
         </div>
   
   
@@ -59,7 +60,7 @@
               <div class="modal-footer justify-content-center">
                 <button type="button" class="btn btn-close btn-warning border border-secondary" 
                 data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true" class="sr-only"> Close</span>
+                  <span aria-hidden="true">Close</span>
                 </button>
               </div>
             </div>
