--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         </main>
 
-        <button type="button" class="btn btn-floating sr-only" id="btn-back-to-top">
+        <button type="button" class="btn btn-floatingy" id="btn-back-to-top">
           <i class="bi bi-caret-up-fill"></i>
         </button>
 
