--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="navbar-brand">Pokedex
               <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
             </h1> 
-             <button class="navbar-toggler sr-only" type="button" data-toggle="collapse" 
+             <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
              aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
