--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header justify-content-center">
-                <h5 class="modal-title" id="modal-title"> </h5>
+                <h5 class="modal-title" id="modal-title">Modal Title</h5>
               </div>
               <div class="modal-body">
               </div>
