--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <nav class="navbar navbar-expand-sm navbar-light fixed-top">
             <h1 class="navbar-brand">Pokedex
               <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
-            </h1> 
+            </h1>
+            <h3 class="info-title">App Info</h3> 
              <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
              aria-expanded="false" aria-label="Toggle navigation">
