--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@
             <h1 class="navbar-brand">Pokedex
               <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
             </h1>
-            <h3 class="info-title">App Info</h3> 
              <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
              aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-  
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" id="filter" type="search" 
                     placeholder="Find a pokemon.." aria-label="Search">
                 </form>
               </div>
-  
         </nav>
       </header>
   
@@ -47,26 +44,26 @@
           <ul class="pokemon-list row list-unstyled justify-content-center"></ul>
         </div>
   
-  
+
         <!-- Modal -->
-        <div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
-        aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header justify-content-center">
-                <h5 class="modal-title" id="modal-title">Modal Title</h5>
-              </div>
-              <div class="modal-body">
-              </div>
-              <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-close btn-warning border border-secondary" 
-                data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">Close</span>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+			<div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
+      aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header justify-content-center">
+			        <h5 class="modal-title" id="modal-title"> </h5>
+			      </div>
+			      <div class="modal-body">
+			      </div>
+			      <div class="modal-footer justify-content-center">
+			      	<button type="button" class="btn btn-close btn-warning border border-secondary" 
+              data-dismiss="modal" aria-label="Close">
+			      		<span aria-hidden="true"> close</span>
+			      	</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>
 
         </main>
 
