--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" id="filter" type="search" 
-                    placeholder="Find a pokemon.." aria-label="Search">
+                    placeholder="Find a pokemon.." alt="search pokemon box" aria-label="Search">
                 </form>
               </div>
         </nav>
@@ -58,7 +58,7 @@
 			      <div class="modal-footer justify-content-center">
 			      	<button type="button" class="btn btn-close btn-warning border border-secondary" 
               data-dismiss="modal" aria-label="Close">
-			      		<span aria-hidden="true"> close</span>
+			      		<span aria-hidden="true"> Close</span>
 			      	</button>
 			      </div>
 			    </div>
