--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
         crossorigin="anonymous">
         <link rel="icon" type="image/png" href="img/icons8-pokeball-48.png">
-        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="dist/dist-styles.min.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
@@ -82,8 +82,8 @@
           integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
           crossorigin="anonymous"></script>
 
-        <script src="js/promise-polyfill.js"></script>
-        <script src="js/fetch.umd.js"></script>
-        <script src="js/script.js"></script>
+        <script type="text/javascripts" src="js/promise-polyfill.js"></script>
+        <script type="text/javascript" src="js/fetch.umd.js"></script>
+        <script type="text/javascript" src="dist/dist-script.min.js"></script>
     </body>
 </html>
