--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
         </main>
 
-        <button type="button" class="btn btn-floatingy" id="btn-back-to-top">
-          <i class="bi bi-caret-up-fill"></i>
+        <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" aria-label="Back to top">
+          <i class="fas fa-arrow-up"></i>
         </button>
 
         
