--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
         <!-- Modal -->
 			<div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
-      aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
+      aria-labelledby="pokemonModalContainer" aria-hidden="true">
 			  <div class="modal-dialog" role="document">
 			    <div class="modal-content">
 			      <div class="modal-header justify-content-center">
-			        <h5 class="modal-title" id="modal-title">Modal Title</h5>
+			        <h2 class="modal-title" id="modal-title">Modal Title</h2>
 			      </div>
 			      <div class="modal-body">
 			      </div>
@@ -82,6 +82,7 @@
           integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
           crossorigin="anonymous"></script>
 
+        <script type="text/javascript" src="js/tota11y.min.js"></script>
         <script type="text/javascripts" src="js/promise-polyfill.js"></script>
         <script type="text/javascript" src="js/fetch.umd.js"></script>
         <script type="text/javascript" src="dist/dist-script.min.js"></script>
