--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- Modal -->
 			<div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
-      aria-labelledby="pokemonModalContainer" aria-hidden="true">
+      aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
 			  <div class="modal-dialog" role="document">
 			    <div class="modal-content">
 			      <div class="modal-header justify-content-center">
