--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   
 
         <!-- Modal -->
-			<div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog" 
-      aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
+			<div class="modal fade" id="poModal" tabindex="-1" role="dialog" 
+      aria-labelledby="poModalLabel" aria-hidden="true">
 			  <div class="modal-dialog" role="document">
 			    <div class="modal-content">
 			      <div class="modal-header justify-content-center">
