--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
         crossorigin="anonymous">
         <link rel="icon" type="image/png" href="img/icons8-pokeball-48.png">
-        <link href="dist/dist-styles.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
@@ -67,8 +67,7 @@
 
         </main>
 
-        <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" aria-label="Back to top">
-          <i class="fas fa-arrow-up"></i>
+        <button type="button" class="btn btn-floating" id="btn-back-to-top" aria-label="Back to top">Up
         </button>
 
         
@@ -85,6 +84,6 @@
         <script type="text/javascript" src="js/tota11y.min.js"></script>
         <script type="text/javascripts" src="js/promise-polyfill.js"></script>
         <script type="text/javascript" src="js/fetch.umd.js"></script>
-        <script type="text/javascript" src="dist/dist-script.min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
