--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="page-header" id="top">
         <nav class="navbar navbar-expand-sm navbar-light fixed-top">
             <h1 class="navbar-brand">Pokedex
-              <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" alt="pokeball logo" width="90px">
+              <img src="img/pokeball-logo-DC23868CA1-seeklogo.com.png" class="pokeball-logo" alt="pokeball logo">
             </h1>
              <button class="navbar-toggler" type="button" data-toggle="collapse" 
              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" id="filter" type="search" 
-                    placeholder="Find a pokemon.." alt="search pokemon box" aria-label="Search">
+                    placeholder="Find a pokemon.." aria-label="Search">
                 </form>
               </div>
         </nav>
@@ -81,9 +81,9 @@
           integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
           crossorigin="anonymous"></script>
 
-        <script type="text/javascript" src="js/tota11y.min.js"></script>
-        <script type="text/javascripts" src="js/promise-polyfill.js"></script>
-        <script type="text/javascript" src="js/fetch.umd.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <script src="js/tota11y.min.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/fetch.umd.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
