--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 			  </div>
 			</div>
 
-        <button type="button" class="btn btn-floating" id="btn-back-to-top" aria-label="Back to top">Up
+        <button type="button" class="btn btn-floating" id="btn-back-to-top" aria-label="Back to top">
+          <span class="button__icon">
+            <ion-icon name="arrow-up-outline"></ion-icon>
+          </span>
         </button>
 
        </main>
@@ -78,10 +81,11 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
           integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
           crossorigin="anonymous"></script>
-
+        
         <script src="js/tota11y.min.js"></script>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
         <script src="dist/dist-script.min.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     </body>
 </html>
