--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <main>
   
   
-      <!-- List of Pokemon -->
+      <!-- List of Pokemons -->
         <div class="container list-container">
           <ul class="pokemon-list row list-unstyled justify-content-center"></ul>
         </div>
